--- a/front-vtracker/src/app/app.component.html
+++ b/front-vtracker/src/app/app.component.html
@@ -1,3 +1,4 @@
+<app-navbar></app-navbar>
 <div class="porcContainer">
   <div class="OUTSIDE">
     <div class="INSIDE"><label class="porcentaje">0%</label></div>
