--- a/front-vtracker/src/app/app.component.scss
+++ b/front-vtracker/src/app/app.component.scss
@@ -1,33 +1,38 @@
 .porcContainer {
-  width: 500px;
-}
-
-.OUTSIDE {
+  width: 100%;
+  height: 100vh;
+  background-color: aqua;
   display: flex;
   align-items: center;
-  width: 500px;
-  height: 25px;
-  background-color: red;
-
-  #perdida {
-    position: absolute;
-    width: 500px;
-    left: 450px;
-    color: #000;
-  }
+  justify-content: center;
 }
 
-.INSIDE {
-  display: flex;
-  align-items: center;
-  width: 0%;
-  height: 25px;
-  background-color: green;
-}
+// .OUTSIDE {
+//   display: flex;
+//   align-items: center;
+//   width: 500px;
+//   height: 25px;
+//   background-color: red;
 
-.porcentaje {
-  font-family: "Staatliches", cursive;
-  color: #d9d9d9;
-  padding-left: 10px;
-  padding-right: 10px;
-}
+//   #perdida {
+//     position: absolute;
+//     width: 500px;
+//     left: 450px;
+//     color: #000;
+//   }
+// }
+
+// .INSIDE {
+//   display: flex;
+//   align-items: center;
+//   width: 0%;
+//   height: 25px;
+//   background-color: green;
+// }
+
+// .porcentaje {
+//   font-family: "Staatliches", cursive;
+//   color: #d9d9d9;
+//   padding-left: 10px;
+//   padding-right: 10px;
+// }
