--- a/front-vtracker/src/app/abm-list/abm-list.component.html
+++ b/front-vtracker/src/app/abm-list/abm-list.component.html
@@ -1,1 +1,72 @@
-<p>abm-list works!</p>
+<!-- Sacar td de asd reemplazar por {{item.user}} con ng for -->
+
+<table class="abm-list-body">
+  <thead class="abm-list-header">
+    <tr>
+      <th>Username</th>
+      <th class="button-head">
+        <span>Username</span>
+      </th>
+      <th class="button-head">
+        <span>Username</span>
+      </th>
+    </tr>
+  </thead>
+  <tbody class="abm-list-content">
+    <tr class="abm-list-item">
+      <td class="abm-list-item-content">
+        <div class="abm-list-item-content-text">
+          <span>Battler</span>
+        </div>
+      </td>
+
+      <td class="abm-list-item-content">
+        <div class="abm-list-item-button-Update">
+          <button
+            class="abm-list-item-button-Update"
+            name="update"
+            value="update"
+          >
+            Update
+          </button>
+        </div>
+      </td>
+      <td class="abm-list-item-content">
+        <div class="abm-list-item-button-Delete">
+          <button
+            class="abm-list-item-button-Delete"
+            name="delete"
+            value="delete"
+          >
+            Delete
+          </button>
+        </div>
+      </td>
+    </tr>
+    <tr class="abm-list-item">
+      <td>Chester</td>
+      <td class="abm-list-item-content">
+        <div class="abm-list-item-button-Update">
+          <button
+            class="abm-list-item-button-Update"
+            name="update"
+            value="update"
+          >
+            Update
+          </button>
+        </div>
+      </td>
+      <td class="abm-list-item-content">
+        <div class="abm-list-item-button-Delete">
+          <button
+            class="abm-list-item-button-Delete"
+            name="delete"
+            value="delete"
+          >
+            Delete
+          </button>
+        </div>
+      </td>
+    </tr>
+  </tbody>
+</table>
