--- a/front-vtracker/src/app/components/abm-form/abm-form.component.html
+++ b/front-vtracker/src/app/components/abm-form/abm-form.component.html
@@ -1,1 +1,31 @@
-<p>abm-form works!</p>
+<div class="container">
+  <div class="row">
+    <div class="col" style="background-color: rgb(174, 214, 173)">
+      <form>
+        <h2>{{ textlogin }}</h2>
+        <div class="form-group">
+          <label>Nombre</label>
+          <input type="text" class="form-control" />
+        </div>
+
+        <div class="form-group">
+          <label>Email</label>
+          <input type="email" class="form-control" />
+        </div>
+
+        <div class="form-group">
+          <label>Teléfono</label>
+          <input type="tel" class="form-control" />
+        </div>
+
+        <div class="form-group">
+          <label>Asunto</label>
+          <input type="text" class="form-control" />
+        </div>
+        <button type="submit" class="btn btn-primary mb-2">
+          Enviar Formulario
+        </button>
+      </form>
+    </div>
+  </div>
+</div>
