--- a/front-vtracker/src/app/components/abm-form/abm-form.component.html
+++ b/front-vtracker/src/app/components/abm-form/abm-form.component.html
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col" style="background-color: rgb(174, 214, 173)">
       <form>
-        <h2>{{ textlogin }}</h2>
+        <h2>{{ entityText }}</h2>
         <div class="form-group">
           <label>Nombre</label>
           <input type="text" class="form-control" />
