awesomefonts and color vars added to main stylesheet,  abm-form finished for review

--- a/front-vtracker/src/app/components/abm-list/abm-list.component.scss
+++ b/front-vtracker/src/app/components/abm-list/abm-list.component.scss
@@ -1,7 +1,4 @@
-$spc-red: #fa4454;
-$spc-head-blue: #364966;
-$spc-darker-blue: #313d4e;
-$button-green: #3cf84e;
+@import 'src/styles.scss';
 
 .abm-list-body {
   // styles for abm-list-body
