--- a/front-vtracker/src/app/components/abm-form/abm-form.component.html
+++ b/front-vtracker/src/app/components/abm-form/abm-form.component.html
@@ -1,30 +1,37 @@
 <div class="container">
   <div class="row">
-    <div class="col" style="background-color: rgb(174, 214, 173)">
+    <div class="col">
       <form>
         <h2>{{ entityText }}</h2>
-        <div class="form-group">
-          <label>Nombre</label>
-          <input type="text" class="form-control" />
+
+
+
+        <div class="form-group form-style">
+          <input type="text" #puuidBox class="form-control" placeholder="Puuid" />
         </div>
 
-        <div class="form-group">
-          <label>Email</label>
-          <input type="email" class="form-control" />
+        <div class="form-group form-style">
+          <input type="text" #usernameBox class="form-control" placeholder="Username" />
         </div>
 
-        <div class="form-group">
-          <label>Teléfono</label>
-          <input type="tel" class="form-control" />
+        <div class="form-group form-style">
+          <input type="text" #passwordBox class="form-control" placeholder="Password" />
         </div>
 
-        <div class="form-group">
-          <label>Asunto</label>
-          <input type="text" class="form-control" />
+        <div class="form-group form-style">
+          <input type="email" #emailBox class="form-control" placeholder="Email" />
         </div>
+
+        <div class="form-group form-style">
+          <input type="text" #crosshairBox class="form-control" placeholder="Crosshair" />
+        </div>
+
+        <button (click)="clearFields()" type="reset" class="btn">Clear fields</button>
+
         <button type="submit" class="btn btn-primary mb-2">
-          Enviar Formulario
+          Confirm
         </button>
+        
       </form>
     </div>
   </div>
