--- a/front-vtracker/src/styles.scss
+++ b/front-vtracker/src/styles.scss
@@ -6,6 +6,7 @@ $spc-head-blue: #364966;
 $spc-darker-blue: #313d4e;
 $button-green: #3cf84e;
 $icon-color: #ACAFB2;
+$text-font: 'Montserrat';
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
