--- a/front-vtracker/src/app/components/login-form/login-form.component.html
+++ b/front-vtracker/src/app/components/login-form/login-form.component.html
@@ -3,25 +3,39 @@
     <div class="col">
       <form>
         <h2>Sign up</h2>
-        <div class="form-group form-style">
+        <div class="form-group">
           <input type="text" class="form-control" placeholder="Username" />
           <i class="fa-regular fa-user"></i>
         </div>
 
-        <div class="form-group form-style">
+        <div class="form-group">
           <input type="email" class="form-control" placeholder="Password" />
+          <i class="fa-solid fa-lock"></i>
         </div>
 
-        <div class="form-group form-style">
-          <input type="tel" class="form-control" placeholder="Confirm P" />
+        <div class="form-group">
+          <input type="tel" class="form-control" placeholder="Confirm-password" />
+          <i class="fa-solid fa-lock"></i>
         </div>
 
-        <div class="form-group form-style">
-          <input type="text" class="form-control" placeholder="Text" />
+        <div class="form-group">
+          <input type="text" class="form-control" placeholder="Email" />
+          <i class="fa-solid fa-envelope"></i>
         </div>
+
+        <div class="form-check">
+          <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+          <label class="form-check-label" for="flexCheckDefault">
+             I agree to the <a href="#">terms of service</a>
+          </label>
+        </div>
+
         <button type="submit" class="btn btn-primary mb-2">
-          Enviar Formulario
+          Start tracking!
         </button>
+
+        <p class="form-changer"> Already have an account? <a (click)="turnLogIn()">Log in!</a> </p>
+
       </form>
     </div>
   </div>
