--- a/front-vtracker/src/app/components/login-form/login-form.component.scss
+++ b/front-vtracker/src/app/components/login-form/login-form.component.scss
@@ -1,6 +1,7 @@
 @import 'src/styles.scss';
 
 .container {
+  width: 90%;
   i {
     background-color: white;
   }
@@ -10,26 +11,57 @@
       // style for the column
       background-color: $spc-head-blue;
       border-radius: 15px;
-
+      
       form {
         h2 {
           color: $spc-red;
           text-align: center;
-          font-size: 30px;
+          font-size: 35px;
           text-transform: uppercase;
-          font-style: Montserrat;
-          font-weight: bold;
+          font-family: $text-font;
+          font-weight: 800;
           padding-top: 5%;
+        }
+        .form-check{
+          margin-left: 4%;
+          padding-top: 0.5%;
+          padding-bottom: 5%;
 
+          .form-check-label {
+            color: $spc-red;
+            font-family: $text-font;
+            font-weight: 500;   
+
+
+            a {
+              color: $button-green;
+              font-weight: 500;
+            }
+
+          }     
+
+          .form-check-input {
+            border-radius: 0px;
+            transform: scale(1.3);      
+          }
         }
 
         .form-group {
           display: flex;
           flex-direction: row;
           align-items: center;
+          padding-block: 3%;
+          padding-inline: 3%;
+          margin-right: 5px;
+          margin-left: 0px;
 
           .form-control {
             flex-grow: 1;
+          }
+          .form-control::placeholder {
+            font-family: $text-font; 
+            font-weight: 600;
+            color: $icon-color;
           }
         }
 
@@ -44,22 +76,34 @@
           display: block;
           margin: auto;
           background-color: $spc-red;
-          border-radius: 5px;
+          margin-block: 2%;
+          border-color: $spc-red;
 
           // style for the button
           &.btn-primary {
-            // style for the primary button
-          }
+            font-family: $text-font;
+            font-size: 85%;
+            font-weight: 500;    
+            border-radius: 5px;
+            text-transform: uppercase;
+            padding-inline: 28%;
+            padding-block: 2%;
+         }
+        }
+        .form-changer{
+          font-family: $text-font;
+          color: $spc-red;
+          font-weight: 500;
+          font-size: 85%;
+          padding-top: 7%;
+          margin-left: 4%;
 
-          &.mb-2 {
-            // style for the margin bottom
+          a{
+            color: $button-green;
+            
           }
         }
       }
     }
   }
-}
-
-.form-style {
-  padding: 5px 0;
 }
