--- a/front-vtracker/src/app/components/login-form/login-form.component.scss
+++ b/front-vtracker/src/app/components/login-form/login-form.component.scss
@@ -5,7 +5,6 @@
   i {
     background-color: white;
   }
-
   .row {
     .col {
       // style for the column
@@ -100,10 +99,40 @@
 
           a{
             color: $button-green;
-            
           }
         }
       }
+      
+    }
+  }
+  .signIsland{   
+    background-color: $spc-head-blue;
+    font-family: $text-font;
+    border-radius: 20px;
+    margin-top: 1%;  
+
+    //text
+    color: $spc-red;  
+    font-weight: 500;
+    font-size: 100%;
+    p{
+      font-family: $text-font;
+      color: $spc-red;
+      font-weight: 500;
+      font-size: 85%;
+      padding-top: 1%;
+      margin-top: 3%;
+      margin-left: 4%;
+    }
+    a {
+      color: $button-green;
+    }
+          
+    .logAnchor {
+      text-decoration: underline;
+      text-transform: uppercase;
+      margin-left: 10%;
+      font-style: italic;        
     }
   }
 }
