--- a/front-vtracker/src/app/components/navbar/navbar.component.html
+++ b/front-vtracker/src/app/components/navbar/navbar.component.html
@@ -4,10 +4,10 @@
   </a>
   <div class="buttons">
     <button class="search-btn" (click)="toggleSearchMode()">
-      <span class="material-symbols-outlined"> search </span>
+      <i class="fa-solid fa-magnifying-glass"></i>
     </button>
     <button class="profile-btn">
-      <span class="material-symbols-outlined"> manage_accounts </span>
+      <i class="fa-solid fa-user-gear"></i>
     </button>
   </div>
 </nav>
@@ -25,7 +25,7 @@
         type="submit"
         (click)="toggleSearchMode()"
       >
-        <span class="material-symbols-outlined"> close </span>
+        <i class="fa-solid fa-xmark"></i>
       </button>
     </div>
   </form>
