--- a/front-vtracker/src/app/components/navbar/navbar.component.html
+++ b/front-vtracker/src/app/components/navbar/navbar.component.html
@@ -13,7 +13,7 @@
 </nav>
 
 <div *ngIf="searchMode" class="search-box">
-  <form class="">
+  <form class="search-form">
     <div class="input-group custom-search">
       <input
         type="text"
