--- a/front-vtracker/src/styles.scss
+++ b/front-vtracker/src/styles.scss
@@ -5,6 +5,8 @@ $spc-head-blue: #364966;
 $spc-darker-blue: #313d4e;
 $button-green: #3cf84e;
 $icon-color: #acafb2;
+$spc-card-bg: #b0b5bc;
+$spc-card-bg2: #d9d9d9;
 $text-font: "Montserrat";
 
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
