started, and testing fetching to api

--- a/front-vtracker/src/app/app.component.html
+++ b/front-vtracker/src/app/app.component.html
@@ -2,4 +2,5 @@
   <app-navbar></app-navbar>
   <app-abm-form></app-abm-form>
   <app-agents-list></app-agents-list>
+  <app-match-history></app-match-history>
 </div>
