--- a/front-vtracker/src/app/components/match-history/match-history.component.scss
+++ b/front-vtracker/src/app/components/match-history/match-history.component.scss
@@ -34,19 +34,20 @@
     border-radius: 15px;
 
     .container-img {
-      position: relative;
-      width: 20%;
-
+      width: 25vw;
+      height: 10vh;
+      width: 30%;
+      padding-right: 30px;
       .match-img {
-        position: absolute;
-        top: -20px;
-        width: 90%;
-        border-radius: 8px;
+        width: 25vw;
+        height: 10vh;
         z-index: 1;
+        background-size: cover;
+        border-radius: 15px;
       }
       #agent-img {
-        top: -15px;
-        width: 45%;
+        width: 50%;
+        height: 100%;
         z-index: 2;
       }
     }
