--- a/front-vtracker/src/app/app.component.html
+++ b/front-vtracker/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div>
   <app-navbar></app-navbar>
-  <app-abm-form></app-abm-form>
+  <app-profile-template></app-profile-template>
   <app-agents-list></app-agents-list>
 </div>
