--- a/front-vtracker/src/styles.scss
+++ b/front-vtracker/src/styles.scss
@@ -1,6 +1,7 @@
 @import "~@fortawesome/fontawesome-free/css/all.css";
 
 $spc-red: #fa4454;
+$spc-light-red: #ffa7af;
 $spc-head-blue: #364966;
 $spc-darker-blue: #313d4e;
 $button-green: #3cf84e;
@@ -10,7 +11,10 @@ $spc-card-bg2: #d9d9d9;
 
 $text-font: "Montserrat";
 
-
+@font-face {
+  font-family: "storm-gust";
+  src: url("/assets/fonts/Storm-gust.otf");
+}
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
 
 /* Document
