--- a/front-vtracker/src/app/components/match-history/match-history.component.scss
+++ b/front-vtracker/src/app/components/match-history/match-history.component.scss
@@ -27,29 +27,56 @@
     align-items: center;
     justify-content: space-around;
     width: 95%;
-    height: 50px;
+    height: 55px;
     margin-bottom: 5px;
     background-color: $spc-card-bg2;
     color: $spc-red;
     border-radius: 15px;
 
     .container-img {
-      width: 25vw;
-      height: 10vh;
-      width: 30%;
+      display: flex;
+      flex-direction: row;
+      justify-content: flex-start;
+      height: auto;
+      width: 30vw;
       padding-right: 30px;
-      .match-img {
-        width: 25vw;
-        height: 10vh;
-        z-index: 1;
-        background-size: cover;
+      background-size: cover;
+      background-position: bottom;
+      border-radius: 15px;
+
+      #agent-img {
+        width: auto;
+        height: 50px;
+        padding-left: 10px;
         border-radius: 15px;
       }
-      #agent-img {
-        width: 50%;
-        height: 100%;
-        z-index: 2;
-      }
+    }
+    .result {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      width: 14vw;
+    }
+    .rank {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      width: 10vw;
+    }
+    .kda-result {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      width: 18vw;
+    }
+    .mode {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      width: 22vw;
     }
   }
 }
