--- a/front-vtracker/src/app/components/agents-list/agents-list.component.scss
+++ b/front-vtracker/src/app/components/agents-list/agents-list.component.scss
@@ -14,10 +14,10 @@
   .agent-title {
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: space-evenly;
     align-items: center;
-    width: 80%;
-    font-size: 28px;
+    width: 90%;
+    font-size: 26px;
     font-weight: 700;
     color: $spc-red;
     margin: 20px 15px 0px 15px;
