--- a/front-vtracker/src/app/app.component.scss
+++ b/front-vtracker/src/app/app.component.scss
@@ -1,5 +1,8 @@
+@import "src/styles.scss";
+
 div {
   display: flex;
   flex-direction: column;
   width: 100%;
+  background-color: $spc-darker-blue;
 }
