--- a/front-vtracker/src/app/components/profile-template/profile-template.component.html
+++ b/front-vtracker/src/app/components/profile-template/profile-template.component.html
@@ -1,14 +1,9 @@
-<div class="main-container">
+<div class="main-container" [style.backgroundImage]="'url(' + playerCard + ')'">
   <div class="profile-main">
     <!--la imagen de abajo sacarla de la request matchid-->
-    <img
-      src="https://media.valorant-api.com/agents/320b2a48-4d9b-a075-30f1-1f93a9b638fa/displayicon.png"
-    />
+    <img src="{{ playerAgent }}" />
     <!--la imagen de abajo sacarla de la request mmr-history-->
-    <img
-      src="https://media.valorant-api.com/competitivetiers/03621f52-342b-cf4e-4f86-9350a49c6d04/14/largeicon.png"
-      class="rank-img"
-    />
+    <img src="{{ playerMmrIcon }}" class="rank-img" />
     <!--la imagen de abajo generarla con la request a henrik de crosshair en base al codigo del user-->
 
     <div class="crosshair" *ngIf="hasCrosshair">
@@ -22,7 +17,8 @@
     <!--Si el usuario NO tiene cuenta en la pagina, no se muestra su crosshair-->
   </div>
   <div class="user-tag">
-    <p class="p-pos">Battler</p>
-    <p class="tag">#LAS</p>
+    <p class="p-pos">{{ name }}</p>
+
+    <p class="tag">#{{ tag }}</p>
   </div>
 </div>
