crosshair support added

--- a/front-vtracker/src/app/components/profile-template/profile-template.component.html
+++ b/front-vtracker/src/app/components/profile-template/profile-template.component.html
@@ -10,7 +10,9 @@
       <img src="assets/images/cross-hair-bg2.png" class="crosshair-bg-img" />
 
       <img
-        src="https://api.henrikdev.xyz/valorant/v1/crosshair/generate?id=0%3BP%3Bc%3B8%3Bu%3BFF0000FF%3Bb%3B1"
+        src="https://api.henrikdev.xyz/valorant/v1/crosshair/generate?id={{
+          crosshairCode
+        }}"
         class="crosshair-img"
       />
     </div>
