--- a/front-vtracker/src/app/app.component.html
+++ b/front-vtracker/src/app/app.component.html
@@ -1,6 +1,2 @@
-<div>
-  <app-navbar></app-navbar>
-  <app-profile-template></app-profile-template>
-  <app-agents-list></app-agents-list>
-  <app-match-history></app-match-history>
-</div>
+<app-navbar></app-navbar>
+<router-outlet></router-outlet>
