--- a/front-vtracker/src/app/shared/components/navbar/navbar.component.html
+++ b/front-vtracker/src/app/shared/components/navbar/navbar.component.html
@@ -1,12 +1,12 @@
 <nav class="container-nav" *ngIf="!searchMode">
-  <a href="/" class="losttrack-logo">
+  <a routerLink="/home" class="losttrack-logo">
     <img src="./assets/LostTrack.svg" alt="Losttack" />
   </a>
   <div class="buttons">
     <button class="search-btn" (click)="toggleSearchMode()">
       <i class="fa-solid fa-magnifying-glass"></i>
     </button>
-    <button class="profile-btn">
+    <button class="profile-btn" routerLink="/profile">
       <i class="fa-solid fa-user-gear"></i>
     </button>
   </div>
