--- a/front-vtracker/src/app/profile/components/match-history/match-history.component.html
+++ b/front-vtracker/src/app/profile/components/match-history/match-history.component.html
@@ -8,6 +8,7 @@
       "
     >
       <img src="{{ m.agent }}" alt="agente" id="agent-img" />
+      <img src="{{ m.rank_img }}" alt="rango" id="rank-img" />
     </div>
     <div class="result">{{ m.wins }} : {{ m.losses }}</div>
     <div class="rank">
