--- a/front-vtracker/src/app/home/pages/home/home.component.scss
+++ b/front-vtracker/src/app/home/pages/home/home.component.scss
@@ -6,7 +6,7 @@
   align-items: center;
   justify-content: center;
   height: 100vh;
-  background-image: url("../../../../assets/images/home-background.svg");
+  background-image: url("../../../../assets/images/test.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: top;
