--- a/front-vtracker/src/app/profile/components/match-history/match-history.component.scss
+++ b/front-vtracker/src/app/profile/components/match-history/match-history.component.scss
@@ -37,16 +37,23 @@
       display: flex;
       flex-direction: row;
       justify-content: flex-start;
+      align-items: center;
       height: auto;
       width: 30vw;
       padding-right: 30px;
       background-size: cover;
       background-position: bottom;
-      border-radius: 15px;
-
+      border-radius: 10px;
+      margin-left: 2px;
       #agent-img {
         width: auto;
         height: 50px;
+        padding-left: 10px;
+        border-radius: 15px;
+      }
+      #rank-img {
+        width: auto;
+        height: 40px;
         padding-left: 10px;
         border-radius: 15px;
       }
