--- a/front-vtracker/src/app/home/pages/home/home.component.scss
+++ b/front-vtracker/src/app/home/pages/home/home.component.scss
@@ -13,22 +13,47 @@
 
   .form-container {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
     width: 100vw;
-    input {
+
+    .inputs {
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      justify-content: center;
+      width: 100%;
+      input {
+        height: 40px;
+        border: 2px solid $spc-red;
+        padding: 10px;
+      }
+    }
+    #input-name {
       height: 40px;
       border: 2px solid $spc-red;
       padding: 10px;
-    }
-    #input-name {
       width: 60%;
       border-radius: 30px 0px 0px 30px;
     }
-    #input-tag {
+    #input-region {
+      height: 40px;
+      border: 2px solid $spc-red;
+      padding: 0px;
       width: 20%;
       border-radius: 0 30px 30px 0;
+    }
+    .go-btn {
+      background-color: transparent;
+      border: none;
+      margin-top: 10px;
+
+      animation: pulse 1s infinite;
+      .go-img {
+        width: auto;
+        height: 40px;
+      }
     }
   }
 }
