9/12/23 partial implementation fix

--- a/front-vtracker/src/app/profile/components/profile-template/profile-template.component.html
+++ b/front-vtracker/src/app/profile/components/profile-template/profile-template.component.html
@@ -1,9 +1,9 @@
-<div class="main-container" [style.backgroundImage]="'url(' + playerCard + ')'">
+<div class="main-container" [style.backgroundImage]="'url(' + matchs[0].card + ')'">
   <div class="profile-main">
     <!--la imagen de abajo sacarla de la request matchid-->
-    <img src="{{ playerAgent }}" />
+    <img src="{{ matchs[0].agent }}" />
     <!--la imagen de abajo sacarla de la request mmr-history-->
-    <img src="{{ playerMmrIcon }}" class="rank-img" />
+    <img src="{{ matchs[0].rank_img }}" class="rank-img" />
     <!--la imagen de abajo generarla con la request a henrik de crosshair en base al codigo del user-->
 
     <div class="crosshair" *ngIf="hasCrosshair">
@@ -19,8 +19,8 @@
     <!--Si el usuario NO tiene cuenta en la pagina, no se muestra su crosshair-->
   </div>
   <div class="user-tag">
-    <p class="p-pos">{{ name }}</p>
+    <p class="p-pos">{{ matchs[0].name }}</p>
 
-    <p class="tag">#{{ tag }}</p>
+    <p class="tag">#{{ matchs[0].tag }}</p>
   </div>
 </div>
