--- a/front-vtracker/src/app/crud-user/pages/abm-list/abm-list.component.html
+++ b/front-vtracker/src/app/crud-user/pages/abm-list/abm-list.component.html
@@ -12,11 +12,11 @@
       </th>
     </tr>
   </thead>
-  <tbody class="abm-list-content">
+  <tbody class="abm-list-content" *ngFor="let s of users; index as i">
     <tr class="abm-list-item">
       <td class="abm-list-item-content">
         <div class="abm-list-item-content-text">
-          <span>Battler</span>
+          <span>{{ s.user }}</span>
         </div>
       </td>
 
@@ -26,6 +26,7 @@
             class="abm-list-item-button-Update"
             name="update"
             value="update"
+            (click)="updateUser(i)"
           >
             Update
           </button>
@@ -37,31 +38,7 @@
             class="abm-list-item-button-Delete"
             name="delete"
             value="delete"
-          >
-            Delete
-          </button>
-        </div>
-      </td>
-    </tr>
-    <tr class="abm-list-item">
-      <td>Chester</td>
-      <td class="abm-list-item-content">
-        <div class="abm-list-item-button-Update">
-          <button
-            class="abm-list-item-button-Update"
-            name="update"
-            value="update"
-          >
-            Update
-          </button>
-        </div>
-      </td>
-      <td class="abm-list-item-content">
-        <div class="abm-list-item-button-Delete">
-          <button
-            class="abm-list-item-button-Delete"
-            name="delete"
-            value="delete"
+            (click)="deleteUser(i)"
           >
             Delete
           </button>
