--- a/front-vtracker/src/app/crud-user/pages/abm-list/abm-list.component.scss
+++ b/front-vtracker/src/app/crud-user/pages/abm-list/abm-list.component.scss
@@ -8,7 +8,7 @@
     th {
       background-color: $spc-head-blue;
       color: $spc-red;
-      font: 26px Montserrat;
+      font: 22.8px $text-font;
       padding: 10px;
       text-align: center;
       border: 2px solid $spc-red;
