--- a/front-vtracker/src/app/profile/pages/profile/profile.component.html
+++ b/front-vtracker/src/app/profile/pages/profile/profile.component.html
@@ -1,5 +1,5 @@
 <div *ngIf="matchs.length > 0">
-  <app-profile-template [matchs]="matchs"></app-profile-template>
+  <!-- <app-profile-template [matchs]="matchs"></app-profile-template> -->
   <div class="profile-container">
     <app-agents-list [matchs]="matchs"></app-agents-list>
     <app-match-history [matchs]="matchs"></app-match-history>
