--- a/front-vtracker/src/app/profile/components/agents-list/agents-list.component.scss
+++ b/front-vtracker/src/app/profile/components/agents-list/agents-list.component.scss
@@ -7,20 +7,22 @@
   justify-content: center;
   width: 100%;
   padding-bottom: 15px;
-  max-width: 1200px;
   background-color: $spc-card-bg;
   border: 2px solid $spc-head-blue;
   border-radius: 15px;
   .agent-title {
     display: flex;
     flex-direction: row;
-    justify-content: space-evenly;
+    justify-content: space-around;
     align-items: center;
-    width: 90%;
-    font-size: 26px;
+    width: 95%;
+    font-size: 22px;
     font-weight: 700;
     color: $spc-red;
     margin: 20px 15px 0px 15px;
+    // #winloss {
+    //   font-size: 20px;
+    // }
   }
   .agent-card {
     display: flex;
@@ -28,6 +30,7 @@
     align-items: center;
     justify-content: space-around;
     width: 95%;
+    height: 55px;
     margin-bottom: 5px;
     background-color: $spc-card-bg2;
     color: $spc-red;
@@ -38,11 +41,15 @@
       align-items: center;
       justify-content: space-between;
       width: 13%;
+      height: 100%;
       p {
         font-size: 22px;
       }
       .agent-img {
-        width: 100%;
+        width: auto;
+        height: 50px;
+        padding-left: 10px;
+        border-radius: 15px;
       }
     }
 
@@ -52,6 +59,8 @@
       align-items: center;
       justify-content: center;
       width: 60%;
+      font-size: 18px;
+
       .progressbar {
         display: flex;
         flex-direction: row;
