--- a/front-vtracker/src/app/profile/components/match-history/match-history.component.scss
+++ b/front-vtracker/src/app/profile/components/match-history/match-history.component.scss
@@ -43,8 +43,8 @@
       padding-right: 30px;
       background-size: cover;
       background-position: bottom;
-      border-radius: 10px;
-      margin-left: 2px;
+      border-radius: 15px;
+      margin-left: 3px;
       #agent-img {
         width: auto;
         height: 50px;
@@ -54,8 +54,10 @@
       #rank-img {
         width: auto;
         height: 40px;
-        padding-left: 10px;
+        margin-left: 10px;
         border-radius: 15px;
+        backdrop-filter: blur(5px);
+        box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.6);
       }
     }
     .result {
