--- a/front-vtracker/src/app/profile/components/match-history/match-history.component.scss
+++ b/front-vtracker/src/app/profile/components/match-history/match-history.component.scss
@@ -30,7 +30,7 @@
     height: 55px;
     margin-bottom: 5px;
     background-color: $spc-card-bg2;
-    color: $spc-red;
+    color: $spc-head-blue;
     border-radius: 15px;
 
     .container-img {
