--- a/front-vtracker/src/app/crud-agent/pages/abm-list/abm-list.component.html
+++ b/front-vtracker/src/app/crud-agent/pages/abm-list/abm-list.component.html
@@ -1,45 +1,36 @@
 <table class="abm-list-body">
   <thead class="abm-list-header">
     <tr>
-      <th>Username</th>
+      <th>Agent</th>
       <th class="button-head">
         <span>Username</span>
       </th>
       <th class="button-head">
-        <button mat-mini-fab aria-label="Button with plus simbol" style="background-color: #fa4454" (click)="createUser()">
+        <button mat-mini-fab aria-label="Button with plus simbol" style="background-color: #fa4454"
+          (click)="createAgent()">
           <mat-icon class="add-button">add</mat-icon>
         </button>
       </th>
     </tr>
   </thead>
-  <tbody class="abm-list-content" *ngFor="let s of users; index as i">
+  <tbody class="abm-list-content" *ngFor="let a of agents; index as i">
     <tr class="abm-list-item">
       <td class="abm-list-item-content">
         <div class="abm-list-item-content-text">
-          <span>{{ s.username }}</span>
+          <span>{{ a.name }}</span>
         </div>
       </td>
 
       <td class="abm-list-item-content">
         <div class="abm-list-item-button-Update">
-          <button
-            class="abm-list-item-button-Update"
-            name="update"
-            value="update"
-            (click)="updateUser(i)"
-          >
+          <button class="abm-list-item-button-Update" name="update" value="update" (click)="updateAgent(i)">
             Update
           </button>
         </div>
       </td>
       <td class="abm-list-item-content">
         <div class="abm-list-item-button-Delete">
-          <button
-            class="abm-list-item-button-Delete"
-            name="delete"
-            value="delete"
-            (click)="deleteUser(i)"
-          >
+          <button class="abm-list-item-button-Delete" name="delete" value="delete" (click)="deleteAgent(i)">
             Delete
           </button>
         </div>
@@ -47,4 +38,3 @@
     </tr>
   </tbody>
 </table>
-
